# comu

./: .env.sample  Cargo.toml  diesel.toml
migrations/2024-11-30-044506_create_users/: down.sql  up.sql
migrations/2024-11-30-112429_create_posts/: down.sql  up.sql
migrations/2024-11-30-231649_create_comments/: down.sql  up.sql
migrations/2024-12-01-001304_create_users_profile/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/errors/: app_error.rs  handler.rs  mod.rs
src/modules/: mod.rs
src/modules/achievement/: mod.rs
src/modules/admin/: mod.rs
src/modules/auth/: handler.rs  jwt.rs  middleware.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/category/: mod.rs
src/modules/comment/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/post/: handler.rs  mod.rs  model.rs  repository.rs
src/modules/profile/: mod.rs
src/modules/reaction/: mod.rs
src/modules/report/: mod.rs
src/modules/search/: mod.rs
src/modules/setting/: mod.rs
src/modules/stat/: mod.rs
src/modules/subscription/: mod.rs
src/modules/tag/: mod.rs
src/modules/user/: mod.rs
src/utils/: db.rs  jwt.rs  mod.rs
tests/: auth_tests.rs
