[package]
name = "comu"
version = "0.1.0"
edition = "2021"
authors = ["f8dc102 <kernel@yonsei.ac.kr>"]
keywords = ["backend", "api", "actix", "diesel", "jwt"]
description = "Generic Community Backend API"
repository = "https://github.com/f8dc102/comu"
license = "MIT"

[dependencies]
# Actix Framework
actix-web = "4.9"

# bcrypt for Password Encryption 
bcrypt = "0.16"

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# JWT Authentication
jsonwebtoken = "9.3"

# API Validation
validator = { version = "0.19", features = ["derive"] }

# Unique Identifier
uuid = { version = "1.11", features = ["v4", "serde"] }

# Database ORM 
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "chrono"] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
futures = "0.3"

# Once-Cell for Global State
once_cell = "1.20"

# Markdown Parser
pulldown-cmark = "0.12"

# Loading in Development Environment, not in Production
# [dev-dependencies]
# Dotenvy for Environment Variable
dotenvy = "0.15"

[build-dependencies]
# Diesel Migrations
diesel_migrations = { version = "2.2", features = ["postgres"] }
